# stellars-jupyterlab-ds

./: .env  .env.default  .gitattributes  .gitignore  LICENSE  Makefile  README.md  RELEASE.md  Run-Jupyterlab-win-scheduler.xml  compose-gpu.yml  compose-old.yml  compose.yml  docker-compose-gpu.yml  docker-compose-nvidia.yml  docker-compose.yml  project.env  project.json  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh  version.txt
.claude/: CLAUDE.md  JOURNAL.md  JOURNAL_ARCHIVE.md  plan.md
.claude/commands/: build.md  checkpoint.md  cleanup-tags.md  publish.md  release.md  start.md  stop.md
.github/workflows/: ci.yml  docker-build.yml
.resources/: lab-utils-architecture.mmd
docs/: acc-crit-platform.md
etc/: .gitconfig  .gitignore
etc/.jupyter/: .gitignore  jupyter_lab_config.py  migrated
extra/: README.md
extra/aws/: README.md  aws_auth_tunnel.sh
extra/cvat/: README.md  createsuperuser.sh  start.sh  stop.sh
extra/linux-installer/: README.md  build.sh  (+1 more)
home/: .bash_aliases  .gitconfig  .gitignore  README.md  workspace
local/: .env  README.md
logs/: README.md
multi-user/: .gitignore  start_lab_user.sh  stop_lab_user.sh
scripts/: README.md  archive-to-volume.sh  build.bat  build.sh  build_verbose.bat  build_verbose.sh  increment_version.py  unregister_wsl_docker.bat
services/jupyterlab/duoptimum-lab-utils/: .gitignore  README.md  pyproject.toml
services/jupyterlab/duoptimum-lab-utils/src/duoptimum_lab_utils/: __init__.py  cli.py  config.py  envman.py  menu.py  onstart.py  resolver.py  selectors.py  theme.py  tui.py  util.py
services/jupyterlab/duoptimum-lab-utils/tests/: conftest.py  test_cli.py  test_envman.py  test_menu.py  test_onstart.py  test_resolver.py  test_selectors.py  test_shell_launcher.py  test_tui.py  test_version.py
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/: extra-menu-dict.yml  extra-menu-list.yml  lab-utils.yml
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/aux/: aux-menu.yml  aux-tool.sh
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/lab-utils.d/: alpha.sh  beta.sh  cur.sh  opts.sh  tools.sh
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/lab-utils.d/parent.d/: child.sh
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/lab-utils.d/tools.d/: sub.sh
services/jupyterlab/duoptimum-lab-utils/tests/fixtures/lab-utils.lib/: mylib.sh
workspace/: .gitignore  logger.py  new-project-cookiecutter.sh  test-cudf.ipynb  test-tensorflow-gpu.ipynb  test_cuda_tf_and_torch.py  test_tensorflow_cuda.py
(+168 files in other folders)
